objects/RenMaint_System__c.object
<CustomObject>
    <fields>
        <fullName>Account_Address__c</fullName>
        <description>used in Renewal Maintenance report</description>
        <formula>RenMaint_Account_Name__r.Account_Name__r.Address__c+&apos;, &apos; + RenMaint_Account_Name__r.Account_Name__r.City__c+&apos;, &apos; + RenMaint_Account_Name__r.Account_Name__r.State_Region__r.Name +&apos; &apos;+ RenMaint_Account_Name__r.Account_Name__r.BillingPostalCode+&apos;, &apos; + RenMaint_Account_Name__r.Countries__r.Name</formula>
        <label>Account Address</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Name__c</fullName>
        <formula>RenMaint_Account_Name__r.Account_Name__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Number__c</fullName>
        <description>Used in Renewal Maintenance Report</description>
        <formula>RenMaint_Account_Name__r.Account_Name__r.Account_Number__c</formula>
        <label>Account Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Asset_number__c</fullName>
        <label>Asset number</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>City__c</fullName>
        <label>City</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Countries__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Country</label>
        <referenceTo>Country__c</referenceTo>
        <relationshipName>RenMaint_Systems</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Discount__c</fullName>
        <label>Discount %</label>
        <precision>6</precision>
        <scale>3</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Host_Name__c</fullName>
        <description>Stores the Node Id from Entitilement</description>
        <label>Host Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ignore_Flag__c</fullName>
        <defaultValue>false</defaultValue>
        <description>For Data Migration Purpose</description>
        <inlineHelpText>For Data Migration Purpose</inlineHelpText>
        <label>Ignore_Flag</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Include_System__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Include System</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Locking_Id__c</fullName>
        <label>Host Id</label>
        <length>64</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Num_of_Products_del__c</fullName>
        <label># of Products</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Parent_Account_Name__c</fullName>
        <formula>RenMaint_Account_Name__r.Account_Name__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Parent Account Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Platform__c</fullName>
        <description>Stores platform from Entitlement.</description>
        <label>Platform</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Quote_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Quote Name</label>
        <referenceTo>Quote</referenceTo>
        <relationshipName>RenMaint_Systems</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ROW_ID__c</fullName>
        <description>Contain the Migrated Row_iD in Siebel</description>
        <externalId>true</externalId>
        <label>ROW ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RenMaint_Account_Name__c</fullName>
        <label>RenMaint Account Name</label>
        <referenceTo>RenMaint_Account__c</referenceTo>
        <relationshipName>RenMaint_Systems</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>SAP_Id__c</fullName>
        <label>SAP Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>States__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>State</label>
        <referenceTo>State__c</referenceTo>
        <relationshipName>RenMaint_Systems</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>System_Extended_Amount_Format__c</fullName>
        <formula>Quote_Name__r.Quote_Currency__r.Symbol__c &amp;&apos; &apos;&amp; IF(System_Extended_Amount__c &lt; 0,&quot;-&quot;,&quot;&quot;) &amp;  IF(abs(System_Extended_Amount__c) &gt;= 1000000, TEXT(FLOOR(round(System_Extended_Amount__c ,0) / 1000000)) &amp; &quot;,&quot;,&quot;&quot;) &amp; 
IF( abs(System_Extended_Amount__c) &gt;= 1000, RIGHT(TEXT(FLOOR(round(System_Extended_Amount__c ,0) / 1000)), 3) &amp; &quot;,&quot;,&quot;&quot;) &amp; 
RIGHT(TEXT(FLOOR(round(System_Extended_Amount__c ,0))), 3)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>System Extended Amount</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>System_Extended_Amount__c</fullName>
        <label>System Extended Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>System_Id__c</fullName>
        <label>System Id</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Zipcode__c</fullName>
        <label>Zipcode</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>isMigrated__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Tell that is migrated record or not</description>
        <label>isMigrated</label>
        <type>Checkbox</type>
    </fields>
    <label>System</label>
    <nameField>
        <label>System Id</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Systems</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>